<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="about">About</string>
    <string name="about_information">About Information</string>
    <string name="access_denied">拒绝访问</string>
    <string name="acceleration">Acc</string>
    <string name="action">Action</string>
    <string name="action_all">All</string>
    <string name="action_to_operate">To Operate</string>
    <string name="action_to_buy">To Buy</string>
    <string name="action_to_sell">To Sell</string>
    <string name="action_deal">Deal</string>
    <string name="action_edit">Edit</string>
    <string name="action_exit">Exit</string>
    <string name="action_from">From</string>
    <string name="action_new">New Note</string>
    <string name="action_interval">Interval</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_remove_favorite">Remove Favorite</string>
    <string name="action_load">Load</string>
    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>
    <string name="action_filter">Filter</string>
    <string name="action_download">Download</string>
    <string name="action_delete_all">Delete All</string>
    <string name="action_to">To</string>
    <string name="action_order_by_roi">Order by Roi</string>
    <string name="action_order_by_roe">Order by Roe</string>
    <string name="action_order_by_rate">Order by Rate</string>
    <string name="action_order_by_pe">Order by Pe</string>
    <string name="action_order_by_yield">Order by Yield</string>
    <string name="action_order_by_dividend_ratio">Order by DRatio</string>
    <string name="action_order_by_valuation">Order by Valuation</string>
    <string name="added">Added</string>
    <string name="alarm">Alarm</string>
    <string name="app_name">Orion</string>
    <string name="begin_date">Begin Date</string>
    <string name="bonus">Bonus</string>
    <string name="cancel">Cancel</string>
    <string name="candle">Candle</string>
    <string name="cost">Cost</string>
    <string name="created">Created</string>
    <string name="modify">Modify</string>    
    <string name="deal">Deal</string>
    <string name="deal_insert">Deal Insert</string>
    <string name="deal_delete">Deal Delete</string>
    <string name="deal_edit">Deal Edit</string>
    <string name="deal_list">Deal List</string>
    <string name="deal_price">Deal price</string>
    <string name="deal_price_prompt">Price:</string>
    <string name="deal_net">Net</string>
    <string name="deal_volume">Deal Volume</string>
    <string name="deal_volume_prompt">Volume:</string>
    <string name="deal_profit">Profit</string>
    <string name="delete">Delete</string>
    <string name="delete_confirm">Do You Qant to Delete?</string>
    <string name="discount">Discount</string>
    <string name="dividend">Dividend</string>
    <string name="enabled">Enabled</string>
    <string name="r_date">R Date</string>
    <string name="valuation">Valuation</string>
    <string name="yield">Yield</string>
    <string name="total_share">Share</string>
    <string name="market_value">MValue</string>
    <string name="debt_to_net_assets_rato">D2B</string>
    <string name="net_profit">NetProfit</string>
    <string name="book_value_per_share">BPS</string>
    <string name="cash_flow_per_share">CPS</string>
    <string name="net_profit_per_share">NPS</string>
    <string name="net_profit_per_share_in_year">NPSY</string>
    <string name="roi">Roi</string>
    <string name="roe">Roe</string>
    <string name="download">Download</string>
    <string name="end_date">End Date</string>
    <string name="email_hint">Email</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_list">Favorite List</string>
    <string name="financial">Financial</string>
    <string name="financial_list">Financial List</string>
    <string name="financial_data_chart">Financial Data Chart</string>
    <string name="high">High</string>
    <string name="hold">Hold</string>
    <string name="list">List</string>
    <string name="low">Low</string>
    <string name="modified">Modified</string>
    <string name="match">Match</string>
    <string name="match_delete">Match Delete</string>
    <string name="match_edit">Match Edit</string>
    <string name="match_insert">Match Insert</string>
    <string name="match_list">Match List</string>
    <string name="next">next</string>
    <string name="net">Net</string>
    <string name="network_unavailable">Network not Available</string>
    <string name="no_file_found">No File Found!</string>
    <string name="no_sd_card_found">No SD Card Found!</string>
    <string name="notification">Notification</string>
    <string name="notification_message">Message</string>
    <string name="notification_lights">Lights</string>
    <string name="notification_vibrate">Vibrate</string>
    <string name="notification_sound">Sound</string>
    <string name="notification_unavailable">Notification not Available</string>
    <string name="ok">OK</string>
    <string name="overlap">Overlap</string>
    <string name="password_hint">Password</string>
    <string name="pb">PB</string>
    <string name="pe">PE</string>
    <string name="ep">1/PE</string>
    <string name="percent">Percent</string>
    <string name="period_1min">1Min</string>
    <string name="period_5min">5Min</string>
    <string name="period_15min">15Min</string>
    <string name="period_30min">30Min</string>
    <string name="period_60min">60Min</string>
    <string name="period_day">Day</string>
    <string name="period_week">Week</string>
    <string name="period_month">Month</string>
    <string name="period_quarter">Quarter</string>
    <string name="period_year">Year</string>
    <string name="position">Position</string>
    <string name="prev">prev</string>
    <string name="price">Price</string>
    <string name="price_change">Change</string>
    <string name="profit">Profit</string>
    <string name="quota">Quota</string>
    <string name="rate">Rate</string>
    <string name="search">Search</string>
    <string name="schedule">Schedule</string>
    <string name="service">Service</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please Make Sure You Eenter a Username, Password, and Email Address!</string>
    <string name="signup_error_title">Error!</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="slope">Slope</string>
    <string name="intercept">Intercept</string>
    <string name="mean">Mean</string>
    <string name="std">STD</string>
    <string name="dividend_ratio">DRatio</string>
    <string name="start_service">Start</string>
    <string name="stop_service">Stop</string>
    <string name="stock">Stock</string>
    <string name="action_5min">5M</string>
    <string name="action_15min">15M</string>
    <string name="action_30min">30M</string>
    <string name="action_60min">60M</string>
    <string name="action_day">Day</string>
    <string name="action_week">W</string>
    <string name="action_month">M</string>
    <string name="stock_data_chart">Stock Data Chart</string>
    <string name="stock_data_list">Stock Data List</string>
    <string name="stock_name_code">Name</string>
    <string name="stock_code">Stock Code</string>
    <string name="stock_action">Stock Action</string>
    <string name="stock_class">Stock Class</string>
    <string name="stock_class_hsa">HSA</string>
    <string name="stock_class_index">Index</string>
    <string name="stock_code_empty">Stock Code Empty!</string>
    <string name="stock_dividend">Stock Dividend</string>
    <string name="stock_name">Stock Name</string>
    <string name="stock_name_x">Stock Name X</string>
    <string name="stock_name_y">Stock Name Y</string>
    <string name="stock_insert">Stock Insert</string>
    <string name="stock_exist">Stock Exist!</string>
    <string name="stock_edit">Stock Edit</string>
    <string name="stock_list">Stock List</string>
    <string name="stock_operation">Operation</string>
    <string name="stock_quota">Stock Quota</string>
    <string name="stock_se">Stock SE</string>
    <string name="stock_se_sh">SH</string>
    <string name="stock_se_sz">SZ</string>
    <string name="stock_se_hint">sh or sz</string>
    <string name="stock_se_not_found">Stock SE not Found!</string>
    <string name="stock_statistics">Statistics</string>
    <string name="stock_statistics_chart">Statistics Chart</string>
    <string name="stock_cost">Stock Cost</string>
    <string name="stock_hold">Stock Hold</string>    
    <string name="stock_valuation">Stock Valuation</string>
    <string name="symbol_add">+</string>
    <string name="symbol_subtract">-</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_deal_list">Deal List</string>
    <string name="title_activity_deal">Deal</string>
    <string name="title_activity_operation">Operation</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_save_to_sd_card">Save to SD Card</string>
    <string name="title_delete_all">Delete All</string>
    <string name="username_hint">Username</string>
    <string name="velocity">Vel</string>
    <string name="version">Version</string>
    <string name="volume">Volume</string>
    <string name="value">Value</string>
    <string name="ipo">IPO</string>
    <string name="ipo_list">IPO List</string>
    <string name="date">Date</string>
    <string name="time_to_market">TTM</string>
    <string name="filter">Filter</string>
    <string name="saved">Saved</string>
    <string name="error">Error!</string>
    <string name="display">Display</string>
    <string name="wake">Wake</string>
    <string name="system">Systemk</string>
    <string name="settings">Settings</string>
    <string name="press_again_to_exit">Press again to exit!</string>

</resources>