<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/price"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/price"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/net"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/net"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/roi"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/roi"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/roe"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/roe"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/pe"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/ep"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/rate"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/rate"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/pb"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/pb"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/valuation"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/valuation"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/hold"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/hold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/cost"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/cost"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/bonus"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/bonus"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/total_share"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/total_share"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/market_value"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/market_value"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/net_profit"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/net_profit"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/debt_to_net_assets_rato"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/debt_to_net_assets_rato"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/book_value_per_share"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/book_value_per_share"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/cash_flow_per_share"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/cash_flow_per_share"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/net_profit_per_share"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/net_profit_per_share"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/net_profit_per_share_in_year"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/net_profit_per_share_in_year"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/r_date"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/r_date"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dividend"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/dividend"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/yield"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/yield"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/delta"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/delta"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/date"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/date"
        android:textSize="18sp" />

</LinearLayout>