<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/price"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/price"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/net"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/net"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/action_month"
        android:layout_width="@dimen/action_layout_width"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/action_month"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/action_week"
        android:layout_width="@dimen/action_layout_width"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/action_week"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/action_day"
        android:layout_width="@dimen/action_layout_width"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/action_day"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/action_60min"
        android:layout_width="@dimen/action_layout_width"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/action_60min"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/action_30min"
        android:layout_width="@dimen/action_layout_width"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/action_30min"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/action_15min"
        android:layout_width="@dimen/action_layout_width"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/action_15min"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/action_5min"
        android:layout_width="@dimen/action_layout_width"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/action_5min"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/modified"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/modify"
        android:textSize="18sp" />

</LinearLayout>