<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="always|withText"
        android:title="@string/action_refresh">
    </item>
    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="always|withText"
        android:title="@string/action_new">
    </item>
    <item
        android:id="@+id/action_all"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_all">
    </item>
    <item
        android:id="@+id/action_to_buy"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_to_buy">
    </item>
</menu>