<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="always|withText"
        android:title="@string/action_new">
    </item>
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:showAsAction="collapseActionView|ifRoom"
        android:title="@string/search"/>
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_refresh"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_load_from_file"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_load_from_file">
    </item>
    <item
        android:id="@+id/action_save_to_file"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_save_to_file">
    </item>
    <item
        android:id="@+id/action_deal"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_deal"/>

</menu>