<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/price"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/price"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/net"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/net"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/deal"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/deal"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/volume"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/volume"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/profile"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/profile"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/created"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/created"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/modified"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/modified"
        android:textSize="18sp" />

</LinearLayout>