<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/slope"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/slope"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/intercept"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/intercept"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/mean"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/mean"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/std"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/std"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/delta"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/delta"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/created"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/created"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/modified"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/modified"
        android:textSize="18sp" />

</LinearLayout>